--- a/package.json
+++ b/package.json
@@ -6,13 +6,11 @@
     "dev": "next dev -p 4000",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "deploy": "npm run build && firebase deploy"
+    "lint": "next lint"
   },
   "dependencies": {
     "@firebase/functions": "^0.11.6",
     "@heroicons/react": "^2.1.3",
-    "firebase": "^10.12.3",
     "next": "^14.2.3",
     "react": "^18",
     "react-dom": "^18",
